--- a/quotes/index.html
+++ b/quotes/index.html
@@ -9,8 +9,18 @@
 <body>
   <h1>Random Quote:</h1>
   <big><b><q id="quote"></q></b></big>
+  <br>
+  <button id="new">Another quote!</button>
   
   <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-  <script src="script.js"></script>
+<script>
+function getQuote(){
+  $.getJSON('https://api.forismatic.com/api/1.0/?method=getQuote&format=json&lang=en', function(response){
+    $('#quote').text(response.quoteText+' - '+quoteAuthor);
+  }
+}
+$(getQuote);
+$('#new').on('click', getQuote);
+</script>
 </body>
 </html>
