Changed color of the submit button text and changed the input placeholder text to make it more gramatically correct

--- a/TODO list/index.html
+++ b/TODO list/index.html
@@ -20,7 +20,7 @@
             <!-- todo list items  -->
         </ul>
         <form class="add-items">
-            <input type="text" class="form-control" id="todo-list-item" placeholder="What you have to do?">
+            <input type="text" class="form-control" id="todo-list-item" placeholder="What do you have to do?">
             <button class="add" type="submit">Add to List</button>
         </form>
     </div>
