--- a/Color-Game-master/colorGame.html
+++ b/Color-Game-master/colorGame.html
@@ -19,12 +19,12 @@
 		<button class="mode selected">Hard</button>
 	</div>
 	<div id="container">
-		<div class="square"></div>
-		<div class="square"></div>
-		<div class="square"></div>
-		<div class="square"></div>
-		<div class="square"></div>
-		<div class="square"></div>
+		<div class="circle"></div>
+		<div class="circle"></div>
+		<div class="circle"></div>
+		<div class="circle"></div>
+		<div class="circle"></div>
+		<div class="circle"></div>
 	</div>
 	<script type="text/javascript" src="colorGame.js"></script>
 </body>
