final beta commit

--- a/Website for an AI event/index.html
+++ b/Website for an AI event/index.html
@@ -18,41 +18,8 @@
 	
 	<link rel="stylesheet" type="text/css" href="assets/media queries.css">
 	<link rel="stylesheet" type="text/css" href="vendors/animate.css">
-	<link rel="shortcut icon" type="image/png" href="assets/images/7629.png">
-	<meta name="description"
-    content="Codechef-VIT proudly presents our event - Intro to AI, a 6 hour workshop which aims to educate participants about the fundamentals of AI.">
-  <meta name="keywords"
-    content="workshop,vit,graVITas,codechef-vit,Intro to AI,tech,event,speaker,IBM,vellore-institute-of-technology,neural networks">
-  <meta name="author" content="Aditya Beri">
-  <meta name="copyright" content="CodeChef-VIT">
-  <meta name="language" content="en">
-  <meta name="url" content="https://ai.codechefvit.com/">
-  <meta name="category" content="Event">
-  <meta name="coverage" content="Worldwide">
-  <meta name="rating" content="General">
-  <meta name="og:email" content="codechefvit@gmail.com">
-  <meta name="og:phone_number" content="+919646001863">
-  <meta name="og:country-name" content="India">
-  <meta name="og:region" content="Vellore">
-  <meta name="og:site_name" content="Intro to AI">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="Intro to AI">
-  <meta property="og:description"
-    content="Codechef-VIT proudly presents our event - Intro to AI, a 6 hour workshop which aims to educate participants about the fundamentals of AI..">
-  <meta property="og:url" content="https://ai.codechefvit.com/">
-  <meta property="og:site_name" content="Intro to AI">
-  <meta name="twitter:card" content="website">
-  <meta name="twitter:site" content="Intro to Ai">
-  <meta name="twitter:title" content="Intro to AI">
-  <meta name="twitter:description"
-    content="Codechef-VIT proudly presents our event - Intro to AI, a 6 hour workshop which aims to educate participants about the fundamentals of AI.">
-  <meta name="twitter:creator" content="@Adityaberi8">
-  <meta itemprop="name" content="Intro to AI">
-  <meta itemprop="description"
-    content="Codechef-VIT proudly presents our event - Intro to AI, a 6 hour workshop which aims to educate participants about the fundamentals of AI.">
-  
-
+	
+	
 	
 
 	
@@ -71,8 +38,6 @@
 		<nav>
 			<div class='row'>
 
-				<img src="assets/images/ccwhite.png" alt='AI' class='logo'>
-				<img src="assets/images/CC_black.png" alt='AI' class='logo-black'>
 				
 
 
@@ -93,8 +58,8 @@
 			</div>
 		</nav>
 		<div class="hero-text-box">
-			<h1>CODECHEF-VIT PRESENTS TO YOU<br> INTRO TO AI</h1>
-			<a class="btn btn-full btn-animate" href="http://info.vit.ac.in/gravitas2020/gravitas_login.asp">Register</a>
+			<h1> PRESENTING TO YOU<br> INTRO TO AI</h1>
+			<a class="btn btn-full btn-animate" href="">Register</a>
 			<a class="btn btn-ghost btn-animate js--scroll-to-start " href="#">Know more about the event</a>
 
 			
@@ -299,65 +264,6 @@
 
 
 	
-	<footer class="footer-distributed">
-
-		<div class="footer-left">
-
-		
-			
-
-			<p class="footer-links">
-
-
-				4th October 2020,
-				4pm - 10pm
-
-			</p>
-
-			<p class="footer-company-name">Made with &#10084;&#65039; by CodeChef-VIT</p>
-		</div>
-
-		<div class="footer-right">
-
-			
-
-			<div class="footer-icons">
-
-				<a href="https://www.linkedin.com/company/codechef-vit-chapter/"><i class="fab fa-linkedin"></i></a>
-				<a href="https://www.facebook.com/codechefvit"><i class="fab fa-facebook"></i></a>
-				<a href="https://www.instagram.com/codechefvit/"><i class="fab fa-instagram"></i></a>
-				<a href="https://www.youtube.com/channel/UCzFltCrQSB1CKmX440yqTKw"><i class="fab fa-youtube"></i></a>
-				<a href="https://github.com/CodeChefVIT"><i class="fab fa-github"></i></a>
-				<a href="https://twitter.com/codechefvit"><i class="fab fa-twitter"></i></a>
-				<a href="https://medium.com/@codechefvit"><i class="fab fa-medium"></i></a>
-
-
-			</div>
-
-		</div>
-
-		<div class="footer-center">
-
-			<div>
-				<i class="fas fa-map-marker-alt"></i>
-				<p><span>Vellore Institute of Technology</span>Vellore,India</p>
-			</div>
-
-			<div>
-				<i class="fas fa-phone"></i>
-				<p>9646001863</p>
-			</div>
-
-			<div>
-				<i class="far fa-envelope"></i>
-				<p><a href="mailto:codechefvit@gmail.com">codechefvit@gmail.com</a></p>
-			</div>
-
-		</div>
-
-		
-
-	</footer>
 	
 
 	
