added split bill

--- a/Tip Calculator JS/index.html
+++ b/Tip Calculator JS/index.html
@@ -23,6 +23,17 @@
     <div>
       <h4>Tip amount: <span id="tip-amount"></span></h4>
       <h2>Total: <span id="new-total"></span></h2>
+      <br><br>
+      <h2>
+        Bonus:
+      </h2>
+      <h4>
+        Split between <input id="num-people" type="number" min="0" /> people
+      </h4>
+      <button id="split">
+        Split
+      </button>
+      <h2>Each person will pay: <span id="split-total"></span></h2>
     </div>
   </div>
 
