added moment js to show date

--- a/TODO list/index.html
+++ b/TODO list/index.html
@@ -15,7 +15,8 @@
 
 <body>
     <div class="container">
-        <h1>Things I've to do</h1>
+        <h1>Things I've to do today</h1>
+        <p id="todayDate"></p>
         <ul id="list-items">
             <!-- todo list items  -->
         </ul>
@@ -24,6 +25,9 @@
             <button class="add" type="submit">Add to List</button>
         </form>
     </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+
 </body>
 
 </html>
