--- a/Email Signature/Index.html
+++ b/Email Signature/Index.html
@@ -25,7 +25,7 @@
                                     <td colspan="2" class="full-name">Sejal Bharti</td>
                                 </tr>
                                 <tr>
-                                    <td colspan="2" class="title">Web Developer</td>
+                                    <td colspan="2" class="title">Front End Developer</td>
                                 </tr>
                                 <tr>
                                     <td valign="top" class="website">
